--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="bg-gray-50 dark:bg-gray-800 border-t border-gray-200 dark:border-gray-700">
+<footer class="bg-slate-100 dark:bg-gray-800 border-t border-gray-200 dark:border-gray-700">
   <div class="max-w-screen-xl mx-auto py-4 px-4 sm:px-6 lg:px-8">
     <p class="text-center text-sm text-gray-500 dark:text-gray-400">
       &copy; {{ now.Year }} {{ .Site.Params.copyright }}. All rights reserved.
