--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,10 +1,10 @@
 <!-- Header -->
-<header class="sticky top-0 z-50 bg-white dark:bg-gray-800 border-b border-gray-200 dark:border-gray-700">
+<header class="sticky top-0 z-50 bg-slate-100 dark:bg-gray-800 border-b border-gray-200 dark:border-gray-700 shadow-sm md:shadow-xl">
   <div class="max-w-screen-xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex justify-between items-center h-16">
       <!-- Logo -->
       <div class="flex-shrink-0">
-        <a href="/" class="select-none text-2xl font-bold text-black dark:text-white flex items-center"><img src="/logo.svg" alt="{{ .Site.Title }}" class="inline-block h-8 w-8" /> <span class="ml-2">{{ .Site.Title }}</span></a>
+        <a href="/" class="select-none text-2xl font-bold text-black dark:text-white flex items-center"><img src="/logo.svg" alt="{{ .Site.Title }}" class="inline-block h-8 w-8" /> <span class="ml-2 font-nunito">{{ .Site.Title }}</span></a>
       </div>
 
       <!-- Desktop Navigation -->
@@ -44,7 +44,7 @@
         </button>
 
         <!-- Mobile menu button -->
-        <button id="mobile-menu-btn" class="lg:hidden ml-2 sm:ml-4 p-2 text-gray-700 dark:text-gray-300">
+        <button id="mobile-menu-btn" class="md:hidden ml-2 sm:ml-4 p-2 text-gray-700 dark:text-gray-300">
           <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
           </svg>
