--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" class="h-full">
+<html lang="en" class="h-full dark">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ .Site.Title }}</title>
+  <title>{{ if ne .Title .Site.Title }}{{ .Title }} - {{ end }}{{ .Site.Title }}</title>
   {{ partialCached "css.html" . }}
 </head>
-<body class="h-full bg-white dark:bg-gray-900 text-gray-900 dark:text-gray-100">
+<body class="h-full bg-slate-50 dark:bg-gray-900 text-gray-800 dark:text-gray-100 font-open-sans">
   <div class="flex flex-col min-h-full">
     {{ partial "header.html" . }}
     {{ partial "mobile-nav.html" . }}
