--- a/layouts/shortcodes/changelog-item.html
+++ b/layouts/shortcodes/changelog-item.html
@@ -1,12 +1,12 @@
 <div class="mb-4">
   <div class="inline-block px-3 py-1 text-base font-medium rounded mb-2
-    {{- if eq (.Get 0) "changed" }} bg-green-500 text-white dark:bg-green-700 dark:text-green-100
-    {{- else if eq (.Get 0) "removed" }} bg-amber-500 text-white dark:bg-amber-700 dark:text-amber-100
-    {{- else if eq (.Get 0) "added" }} bg-sky-500 text-white dark:bg-sky-700 dark:text-sky-100
-    {{- else if eq (.Get 0) "fixed" }} bg-cyan-500 text-white dark:bg-cyan-700 dark:text-cyan-100
-    {{- else if eq (.Get 0) "deprecated" }} bg-gray-700 text-white dark:bg-gray-600 dark:text-gray-100
-    {{- else if eq (.Get 0) "security" }} bg-red-500 text-white dark:bg-red-700 dark:text-red-100
-    {{- else if eq (.Get 0) "unreleased" }} bg-purple-500 text-white dark:bg-purple-700 dark:text-purple-100
+    {{- if eq (.Get 0) "changed" }} bg-blue-500 text-gray-100 dark:bg-blue-600
+    {{- else if eq (.Get 0) "removed" }} bg-red-500 text-gray-100 dark:bg-red-600
+    {{- else if eq (.Get 0) "added" }} bg-green-500 text-gray-100 dark:bg-green-600
+    {{- else if eq (.Get 0) "fixed" }} bg-teal-500 text-gray-100 dark:bg-teal-600
+    {{- else if eq (.Get 0) "deprecated" }} bg-orange-700 text-gray-100 dark:bg-orange-600
+    {{- else if eq (.Get 0) "security" }} bg-yellow-500 text-gray-100 dark:bg-yellow-600
+    {{- else if eq (.Get 0) "unreleased" }} bg-gray-500 text-gray-100 dark:bg-gray-500
     {{- end }}">
     {{ .Get 0 | title }}
   </div>
