--- a/layouts/shortcodes/tip.html
+++ b/layouts/shortcodes/tip.html
@@ -1,20 +1,20 @@
 
 {{ $type := .Get 0 | default "info" }}
 {{ $icon := "info-circle" }}
-{{ $bgColor := "bg-blue-100 dark:bg-sky-950" }}
-{{ $borderColor := "border-blue-200 dark:border-sky-800" }}
+{{ $bgColor := "bg-blue-100/30 dark:bg-sky-950/30" }}
+{{ $borderColor := "border-blue-200/30 dark:border-sky-800/60" }}
 {{ $iconColour := "text-blue-400 dark:text-sky-500" }}
-{{ $textColor := "text-gray-700 dark:text-gray-300" }}
+{{ $textColor := "text-gray-700 dark:text-sky-100" }}
 
 {{ if eq $type "warning" }}
   {{ $icon = "exclamation-triangle" }}
-  {{ $bgColor = "bg-amber-100 dark:bg-amber-950" }}
-  {{ $borderColor = "border-amber-200 dark:border-amber-800" }}
+  {{ $bgColor = "bg-amber-100/30 dark:bg-amber-950/30" }}
+  {{ $borderColor = "border-amber-200 dark:border-amber-600/40" }}
   {{ $iconColour = "text-amber-400 dark:text-amber-500" }}
-  {{ $textColor = "text-gray-700 dark:text-gray-300" }}
+  {{ $textColor = "text-gray-700 dark:text-amber-100" }}
 {{ end }}
 
-<div class="my-4 p-4 {{ $bgColor }} border-1 border-l-6 {{ $borderColor }} rounded-lg shadow-sm">
+<div class="my-4 px-4 py-0 {{ $bgColor }} border-1 {{ $borderColor }} rounded-lg shadow-sm">
   <div class="flex items-center">
     <div class="flex-shrink-0 pl-1 text-color: {{ $iconColour }}">
       {{ if eq $icon "info-circle" }}
@@ -27,8 +27,13 @@
         </svg>
       {{ end }}
     </div>
-    <div class="ml-4 {{ $textColor }} text-base">
-      {{ .Inner | markdownify }}
+    <div class="ml-4 {{ $textColor }} text-sm">
+      {{ $content := .Inner | markdownify }}
+      {{ if findRE "^<" $content }}
+        {{ $content }}
+      {{ else }}
+        <p>{{ $content }}</p>
+      {{ end }}
     </div>
   </div>
 </div>
