--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<div class="space-y-8">
+<div class="space-y-8 prose prose-lg dark:prose-invert max-w-none mt-6 text-base">
 
     {{ .Content }}
 
