--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ if ne .Title .Site.Title }}{{ .Title }} - {{ end }}{{ .Site.Title }}</title>
   {{ partialCached "css.html" . }}
+  {{ if .Description }}
+  <meta name="description" content="{{ .Description }}">
+  {{ end }}
 </head>
 <body class="h-full bg-slate-50 dark:bg-gray-900 text-gray-800 dark:text-gray-100 font-open-sans">
   <div class="flex flex-col min-h-full">
