--- a/layouts/partials/js.html
+++ b/layouts/partials/js.html
@@ -1,2 +1,7 @@
+<script>
+  window.siteConfig = {
+    defaultTheme: {{ .Site.Params.defaultTheme | default "light" }}
+  };
+</script>
 {{ $js := resources.Get "js/main.js" | js.Build (dict "target" "es2018" "minify" true) }}
 <script src="{{ $js.RelPermalink }}" defer></script>
