--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -52,7 +52,7 @@
         {{- else -}}
           <li class="{{ if $mobile }}mt-3{{ else }}mt-4{{ end }}">
             <a href="{{ .RelPermalink }}" class="group flex items-center justify-between px-2 py-2 text-sm font-medium text-gray-700 dark:text-gray-300 tracking-wider rounded-md hover:bg-gray-100 dark:hover:bg-gray-500/20 hover:text-gray-800 dark:hover:text-white {{ if $isActive }}bg-gray-100 dark:bg-gray-500/20 text-gray-800 dark:text-gray-300 active-nav-item{{ end }}">
-              <span>{{ .Title }}</span>
+              <span>{{ .LinkTitle }}</span>
               {{ if $hasChildren }}
                 {{ if $showChildren }}
                   <svg class="h-5 w-5 flex-shrink-0 text-gray-500 dark:text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
@@ -92,7 +92,7 @@
         {{ $showChildren := and $hasChildren (or $isActive $isAncestor) }}
         <li>
           <a href="{{ .RelPermalink }}" class="group flex items-center justify-between px-2 py-2 text-sm font-medium rounded-md text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-500/20 hover:text-gray-800 dark:hover:text-white {{ if $isActive }}bg-gray-100 dark:bg-gray-500/20 text-gray-800 dark:text-gray-300 active-nav-item{{ end }}">
-            <span>{{ .Title }}</span>
+            <span>{{ .LinkTitle }}</span>
             {{ if $hasChildren }}
               {{ if $showChildren }}
                 <svg class="h-5 w-5 flex-shrink-0 text-gray-500 dark:text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
