--- a/layouts/shortcodes/feature-grid.html
+++ b/layouts/shortcodes/feature-grid.html
@@ -1,1 +1,3 @@
-<div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6 mt-6">
+<div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+  {{ .Inner }}
+</div>
