--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,3 +186,26 @@ tr:nth-child(odd) {
 .feature-row h2 {
   margin-top: 0;
 }
+
+.marker-highlight {
+  background: linear-gradient(104deg, rgba(118, 77, 238, 0.3) 0.9%, rgba(118, 77, 238, 0.8) 2.4%, rgba(118, 77, 238, 0.6) 5.8%, rgba(118, 77, 238, 0.2) 93%, rgba(118, 77, 238, 0.8) 96%, rgba(118, 77, 238, 0.5) 98%), linear-gradient(183deg, rgba(118, 77, 238, 0.4) 0%, rgba(118, 77, 238, 0.4) 7.9%, rgba(118, 77, 238, 0) 15%);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  padding: 0.1em 0.2em;
+  border-radius: 0.2em;
+  position: relative;
+}
+
+.marker-highlight::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #FB37FE;
+  opacity: 0.3;
+  border-radius: 0.2em;
+  transform: rotate(-1deg) skew(-2deg);
+  z-index: -1;
+}
