--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -11,7 +11,7 @@
       <nav class="hidden md:flex space-x-8">
         {{ if .Site.Params.navigation.header }}
           {{ range .Site.Params.navigation.header }}
-            <a href="{{ .url }}" class="text-gray-700 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white">{{ .name }}</a>
+            <a href="{{ .url }}" class="font-bold text-gray-700 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white">{{ .name }}</a>
           {{ end }}
         {{ end }}
       </nav>
