--- a/layouts/partials/js.html
+++ b/layouts/partials/js.html
@@ -3,5 +3,5 @@
     defaultTheme: {{ .Site.Params.defaultTheme | default "light" }}
   };
 </script>
-{{ $js := resources.Get "js/main.js" | js.Build (dict "target" "es2018" "minify" true) }}
+{{ $js := resources.Get "js/main.js" | js.Build (dict "target" "es2018" "minify" true) | fingerprint }}
 <script src="{{ $js.RelPermalink }}" defer></script>
