--- a/layouts/partials/css.html
+++ b/layouts/partials/css.html
@@ -16,4 +16,4 @@
   {{ end }}
 {{ end }}
 {{ $syntax := resources.Get "scss/syntax.scss" | toCSS | fingerprint }}
-<link rel="stylesheet" href="{{ $syntax.Permalink }}" integrity="{{ $syntax.Data.Integrity }}">
+<link rel="stylesheet" href="{{ $syntax.Permalink }}">
